// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`trim fixed length '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "' '",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`trim fixed length ' this ' conditional success tests AST matches snapshot 1`] = `"this"`;

exports[`trim fixed length 'this ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "' '",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`trim fixed length ' this' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "' '",
  ],
  "pos": {
    "column": 6,
    "index": 5,
    "line": 1,
  },
}
`;

exports[`trim fixed length '  this' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`trim fixed length 'foo' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "' '",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`trim variable length '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`trim variable length ' this ' conditional success tests AST matches snapshot 1`] = `"this"`;

exports[`trim variable length 'this ' conditional success tests AST matches snapshot 1`] = `"this"`;

exports[`trim variable length ' this' conditional success tests AST matches snapshot 1`] = `"this"`;

exports[`trim variable length '  this' conditional success tests AST matches snapshot 1`] = `"this"`;

exports[`trim variable length 'foo' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
